# coffee_demo

./: .gitignore  README.md  coffee_demo.py  com.groundlight.start_coffee.plist  pyproject.toml  start-coffee.sh
audio/: README.txt
