[tool.poetry]
name = "coffee-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "coffee_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
groundlight = "^0.7.8"
imgcat = "^0.5.0"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
gtts = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
